# aruku

./: .gitignore  CMakeLists.txt  README.md  package.xml
.github/: pull_request_template.md
.github/workflows/: build-and-test-nightly.yml  build-and-test-stable.yml  build-and-test.yml  build-debian-nightly.yml  build-debian-stable.yml  build-ros2-ws-action.yml  dispatch-discord-pr-bot.yml
config/: aruku.json
data/: aruku.json  control.json  grpc.json  kinematic.json  main.json  walking.json
include/aruku/: aruku.hpp  imu.hpp  imu_filter.hpp  stateless_orientation.hpp  walking.hpp  world_frame.hpp
include/aruku/config/: config.hpp
include/aruku/config/grpc/: call_data.hpp  call_data_base.hpp  call_data_get_config.hpp  call_data_load_config.hpp  call_data_publish_config.hpp  call_data_save_config.hpp  call_data_set_app_status.hpp  call_data_set_config.hpp  config.hpp
include/aruku/config/node/: config_node.hpp
include/aruku/config/utils/: config.hpp  config_util.hpp
include/aruku/grpc/node/: grpc_node.hpp
include/aruku/node/: aruku_node.hpp
include/aruku/walking/: walking.hpp
include/aruku/walking/model/: kinematic_id.hpp  movement.hpp
include/aruku/walking/node/: walking_manager.hpp  walking_node.hpp
include/aruku/walking/process/: kinematic.hpp
launch/: aruku_launch.py
launch/log/: latest_version-check
proto/: aruku.proto
src/: aruku_main.cpp  config_main.cpp  control_main.cpp  grpc_main.cpp  walking_main.cpp
src/aruku/: imu.cpp  imu_filter.cpp  stateless_orientation.cpp  walking.cpp
src/aruku/config/grpc/: call_data.cpp  call_data_base.cpp  call_data_get_config.cpp  call_data_load_config.cpp  call_data_publish_config.cpp  call_data_save_config.cpp  call_data_set_app_status.cpp  call_data_set_config.cpp  config.cpp
src/aruku/config/node/: config_node.cpp
src/aruku/config/utils/: config.cpp  config_util.cpp
src/aruku/grpc/node/: grpc_node.cpp
src/aruku/node/: aruku_node.cpp
src/aruku/proto/: aruku.grpc.pb.cc  aruku.grpc.pb.h  aruku.pb.cc  aruku.pb.h
src/aruku/walking/model/: kinematic_id.cpp
src/aruku/walking/node/: walking_manager.cpp  walking_node.cpp
src/aruku/walking/process/: kinematic.cpp  kinematic.hpp
test/: kinematic_test.cpp  kinematic_test.hpp
